Fixed stars wrapping lines

--- a/src/webapps/ChillFood/static/css/common.css
+++ b/src/webapps/ChillFood/static/css/common.css
@@ -1,5 +1,5 @@
 .title {
-	font-size: 25px;
+	font-size: 20px;
 }
 
 .heading {
