--- a/src/webapps/ChillFood/static/css/recipe_detail.css
+++ b/src/webapps/ChillFood/static/css/recipe_detail.css
@@ -88,7 +88,7 @@
 }
 
 .glyphicon {
-	font-size: 25px;
+	font-size: 20px;
 	color: gold;
 }
 
